[gd_scene load_steps=51 format=3 uid="uid://c7mxjygi8klbu"]

[ext_resource type="Script" uid="uid://b7waqo0f0m5bn" path="res://scripts/zombie.gd" id="1_qgv5u"]
[ext_resource type="Texture2D" uid="uid://78do83wn6olr" path="res://assets/sprites/zombie/skeleton-attack_0.png" id="1_turgy"]
[ext_resource type="Texture2D" uid="uid://cgh78u7f22nb3" path="res://assets/sprites/zombie/skeleton-attack_1.png" id="2_qgv5u"]
[ext_resource type="Texture2D" uid="uid://ubol1afr0hny" path="res://assets/sprites/zombie/skeleton-attack_2.png" id="3_m3wi0"]
[ext_resource type="Texture2D" uid="uid://ddusidargaqik" path="res://assets/sprites/zombie/skeleton-attack_3.png" id="4_y7rkn"]
[ext_resource type="Texture2D" uid="uid://bql7rk3yewrmx" path="res://assets/sprites/zombie/skeleton-attack_4.png" id="5_620wp"]
[ext_resource type="Texture2D" uid="uid://cuku6ixv1785e" path="res://assets/sprites/zombie/skeleton-attack_5.png" id="6_sso3y"]
[ext_resource type="Texture2D" uid="uid://cd5nar72jmgjk" path="res://assets/sprites/zombie/skeleton-attack_6.png" id="7_whhyg"]
[ext_resource type="Texture2D" uid="uid://d1y5dsu4ve4v1" path="res://assets/sprites/zombie/skeleton-attack_7.png" id="8_soxq7"]
[ext_resource type="Texture2D" uid="uid://7mc8aoevgaj4" path="res://assets/sprites/zombie/skeleton-attack_8.png" id="9_e2802"]
[ext_resource type="Texture2D" uid="uid://ca6kuyhhsbo5k" path="res://assets/sprites/zombie/skeleton-idle_0.png" id="10_3fylu"]
[ext_resource type="Texture2D" uid="uid://cfyk22020oqrj" path="res://assets/sprites/zombie/skeleton-idle_1.png" id="11_0df5l"]
[ext_resource type="Texture2D" uid="uid://cpubysa5lyekj" path="res://assets/sprites/zombie/skeleton-idle_2.png" id="12_dklxj"]
[ext_resource type="Texture2D" uid="uid://buxkf4ksl5a3v" path="res://assets/sprites/zombie/skeleton-idle_3.png" id="13_vbctf"]
[ext_resource type="Texture2D" uid="uid://dvfg2nf0ufj4q" path="res://assets/sprites/zombie/skeleton-idle_4.png" id="14_7d3hf"]
[ext_resource type="Texture2D" uid="uid://chw3j2rld4y6f" path="res://assets/sprites/zombie/skeleton-idle_5.png" id="15_g2hu3"]
[ext_resource type="Texture2D" uid="uid://bdh4w2oi2j0i0" path="res://assets/sprites/zombie/skeleton-idle_6.png" id="16_41fgj"]
[ext_resource type="Texture2D" uid="uid://dbd3anfjuxqel" path="res://assets/sprites/zombie/skeleton-idle_7.png" id="17_f8e4k"]
[ext_resource type="Texture2D" uid="uid://cjiuov4um6pxv" path="res://assets/sprites/zombie/skeleton-idle_8.png" id="18_nhwsn"]
[ext_resource type="Texture2D" uid="uid://c11u586fyimje" path="res://assets/sprites/zombie/skeleton-idle_9.png" id="19_w1v86"]
[ext_resource type="Texture2D" uid="uid://nnsucdonbvur" path="res://assets/sprites/zombie/skeleton-idle_10.png" id="20_8f500"]
[ext_resource type="Texture2D" uid="uid://cu1u1a3dvi6f4" path="res://assets/sprites/zombie/skeleton-idle_11.png" id="21_2c01a"]
[ext_resource type="Texture2D" uid="uid://v3h1k7x3jgor" path="res://assets/sprites/zombie/skeleton-idle_12.png" id="22_1jllc"]
[ext_resource type="Texture2D" uid="uid://lmhdrauorwc5" path="res://assets/sprites/zombie/skeleton-idle_13.png" id="23_n8cc5"]
[ext_resource type="Texture2D" uid="uid://chja4mm11pxii" path="res://assets/sprites/zombie/skeleton-idle_14.png" id="24_4bhnw"]
[ext_resource type="Texture2D" uid="uid://cr32p8vuwk54h" path="res://assets/sprites/zombie/skeleton-idle_15.png" id="25_i0dhq"]
[ext_resource type="Texture2D" uid="uid://or6rleclgauc" path="res://assets/sprites/zombie/skeleton-idle_16.png" id="26_ikhb0"]
[ext_resource type="Texture2D" uid="uid://f74gc8njp2de" path="res://assets/sprites/zombie/skeleton-move_0.png" id="27_cw0uh"]
[ext_resource type="Texture2D" uid="uid://ybqf1fj51b68" path="res://assets/sprites/zombie/skeleton-move_1.png" id="28_fdfcd"]
[ext_resource type="Texture2D" uid="uid://bx2xjnepglthk" path="res://assets/sprites/zombie/skeleton-move_2.png" id="29_4m6ck"]
[ext_resource type="Texture2D" uid="uid://bi2mx4b2n3yjj" path="res://assets/sprites/zombie/skeleton-move_3.png" id="30_rn08a"]
[ext_resource type="Texture2D" uid="uid://bkc1hq6yuo6cw" path="res://assets/sprites/zombie/skeleton-move_4.png" id="31_6pkys"]
[ext_resource type="Texture2D" uid="uid://beny3k7smxex7" path="res://assets/sprites/zombie/skeleton-move_5.png" id="32_huysx"]
[ext_resource type="Texture2D" uid="uid://kxvcixf58pad" path="res://assets/sprites/zombie/skeleton-move_6.png" id="33_shgdc"]
[ext_resource type="Texture2D" uid="uid://5ews02l3fubr" path="res://assets/sprites/zombie/skeleton-move_7.png" id="34_i12k7"]
[ext_resource type="Texture2D" uid="uid://cjgd88kik8nd6" path="res://assets/sprites/zombie/skeleton-move_8.png" id="35_a3vf8"]
[ext_resource type="Texture2D" uid="uid://b7cdug1gwbrip" path="res://assets/sprites/zombie/skeleton-move_9.png" id="36_j2sop"]
[ext_resource type="Texture2D" uid="uid://c7uej4s4ld4p3" path="res://assets/sprites/zombie/skeleton-move_10.png" id="37_0pyg8"]
[ext_resource type="Texture2D" uid="uid://cexmfh33cavk6" path="res://assets/sprites/zombie/skeleton-move_11.png" id="38_avgc1"]
[ext_resource type="Texture2D" uid="uid://dvbgcuejx4e8l" path="res://assets/sprites/zombie/skeleton-move_12.png" id="39_5ud3x"]
[ext_resource type="Texture2D" uid="uid://c3jidveoeq0gb" path="res://assets/sprites/zombie/skeleton-move_13.png" id="40_5va82"]
[ext_resource type="Texture2D" uid="uid://w1h1cooydd7j" path="res://assets/sprites/zombie/skeleton-move_14.png" id="41_tq1wq"]
[ext_resource type="Texture2D" uid="uid://chrl6i1wx4pjx" path="res://assets/sprites/zombie/skeleton-move_15.png" id="42_6iss8"]
[ext_resource type="Texture2D" uid="uid://bvhe5tndgplxe" path="res://assets/sprites/zombie/skeleton-move_16.png" id="43_a0epq"]
[ext_resource type="Texture2D" uid="uid://6u23twwtxrv5" path="res://assets/sprites/UI/under.png" id="45_620wp"]
[ext_resource type="Texture2D" uid="uid://bwpqduldmnjuq" path="res://assets/sprites/UI/over.png" id="46_sso3y"]
[ext_resource type="Texture2D" uid="uid://d3hp131mvstex" path="res://assets/sprites/UI/progress.png" id="47_whhyg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qgv5u"]
radius = 55.0
height = 146.0

[sub_resource type="SpriteFrames" id="SpriteFrames_8sdai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_turgy")
}, {
"duration": 1.0,
"texture": ExtResource("2_qgv5u")
}, {
"duration": 1.0,
"texture": ExtResource("3_m3wi0")
}, {
"duration": 1.0,
"texture": ExtResource("4_y7rkn")
}, {
"duration": 1.0,
"texture": ExtResource("5_620wp")
}, {
"duration": 1.0,
"texture": ExtResource("6_sso3y")
}, {
"duration": 1.0,
"texture": ExtResource("7_whhyg")
}, {
"duration": 1.0,
"texture": ExtResource("8_soxq7")
}, {
"duration": 1.0,
"texture": ExtResource("9_e2802")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_3fylu")
}, {
"duration": 1.0,
"texture": ExtResource("11_0df5l")
}, {
"duration": 1.0,
"texture": ExtResource("12_dklxj")
}, {
"duration": 1.0,
"texture": ExtResource("13_vbctf")
}, {
"duration": 1.0,
"texture": ExtResource("14_7d3hf")
}, {
"duration": 1.0,
"texture": ExtResource("15_g2hu3")
}, {
"duration": 1.0,
"texture": ExtResource("16_41fgj")
}, {
"duration": 1.0,
"texture": ExtResource("17_f8e4k")
}, {
"duration": 1.0,
"texture": ExtResource("18_nhwsn")
}, {
"duration": 1.0,
"texture": ExtResource("19_w1v86")
}, {
"duration": 1.0,
"texture": ExtResource("20_8f500")
}, {
"duration": 1.0,
"texture": ExtResource("21_2c01a")
}, {
"duration": 1.0,
"texture": ExtResource("22_1jllc")
}, {
"duration": 1.0,
"texture": ExtResource("23_n8cc5")
}, {
"duration": 1.0,
"texture": ExtResource("24_4bhnw")
}, {
"duration": 1.0,
"texture": ExtResource("25_i0dhq")
}, {
"duration": 1.0,
"texture": ExtResource("26_ikhb0")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_cw0uh")
}, {
"duration": 1.0,
"texture": ExtResource("28_fdfcd")
}, {
"duration": 1.0,
"texture": ExtResource("29_4m6ck")
}, {
"duration": 1.0,
"texture": ExtResource("30_rn08a")
}, {
"duration": 1.0,
"texture": ExtResource("31_6pkys")
}, {
"duration": 1.0,
"texture": ExtResource("32_huysx")
}, {
"duration": 1.0,
"texture": ExtResource("33_shgdc")
}, {
"duration": 1.0,
"texture": ExtResource("34_i12k7")
}, {
"duration": 1.0,
"texture": ExtResource("35_a3vf8")
}, {
"duration": 1.0,
"texture": ExtResource("36_j2sop")
}, {
"duration": 1.0,
"texture": ExtResource("37_0pyg8")
}, {
"duration": 1.0,
"texture": ExtResource("38_avgc1")
}, {
"duration": 1.0,
"texture": ExtResource("39_5ud3x")
}, {
"duration": 1.0,
"texture": ExtResource("40_5va82")
}, {
"duration": 1.0,
"texture": ExtResource("41_tq1wq")
}, {
"duration": 1.0,
"texture": ExtResource("42_6iss8")
}, {
"duration": 1.0,
"texture": ExtResource("43_a0epq")
}],
"loop": false,
"name": &"move",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgv5u"]
size = Vector2(70.5, 164)

[node name="Zombie" type="Area2D"]
script = ExtResource("1_qgv5u")

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(-40, 13)
shape = SubResource("CapsuleShape2D_qgv5u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -3)
sprite_frames = SubResource("SpriteFrames_8sdai")
animation = &"move"
speed_scale = 0.5

[node name="Arms" type="CollisionShape2D" parent="."]
position = Vector2(56.75, 23)
shape = SubResource("RectangleShape2D_qgv5u")

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -95.0
offset_top = -69.0
offset_right = 79.05127
offset_bottom = -54.257935
rotation = 1.5707964
nine_patch_stretch = true
texture_under = ExtResource("45_620wp")
texture_over = ExtResource("46_sso3y")
texture_progress = ExtResource("47_whhyg")

[node name="Attack_timer" type="Timer" parent="."]

[node name="Walking_sfx" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="damage_dealt" from="." to="." method="_on_damage_dealt"]
[connection signal="enemy_dead" from="." to="." method="_on_enemy_dead"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
